[package]
name = "tophub-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5.60", features = ["derive"] }
csv = "1"
dotenvy = "0.15.7"
indicatif = "0.17"
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
